--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "test-app",
+  "name": "devlopment-system",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "dependencies": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-netlify": "^1.0.0-next.11",
-    "@sveltejs/kit": "next",
+    "@babel/core": "^7.14.0",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
+    "@tailwindcss/jit": "^0.1.7",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
-    "cssnano": "^5.0.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "postcss": "^8.2.10",
-    "postcss-load-config": "^3.0.1",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0",
-    "svelte-preprocess": "^4.7.0",
-    "tailwindcss": "^2.1.1",
+    "babel-loader": "^8.2.2",
+    "postcss": "^8.2.8",
+    "tailwindcss": "^2.0.4",
     "vite": "^2.1.0"
-  },
-  "type": "module"
+  }
 }
