--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "dr066-ba-design-token-builder": "github:david-roeger/dr066-ba-design-token-builder",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "@storybook/addon-actions": "^6.3.0-alpha.21",
-    "@storybook/addon-essentials": "^6.3.0-alpha.21",
-    "@storybook/addon-links": "^6.3.0-alpha.21",
-    "@storybook/react": "^6.3.0-alpha.21",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@tailwindcss/jit": "^0.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
