Add heating component

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "dr066-ba-design-token-builder": "github:david-roeger/dr066-ba-design-token-builder",
+    "dr066-ba-design-token-builder": "git+https://git@github.com/david-roeger/dr066-ba-design-token-builder.git",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
