--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006 --no-manager-cache",
+    "build-storybook": "build-storybook",
+    "update-tokens": "npm update dr066-ba-design-token-builder"
   },
   "dependencies": {
+    "@storybook/addons": "^6.2.9",
+    "@storybook/theming": "^6.2.9",
     "dr066-ba-design-token-builder": "git+https://git@github.com/david-roeger/dr066-ba-design-token-builder.git",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
@@ -24,6 +27,7 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "postcss": "^8.2.8",
+    "storybook-addon-pseudo-states": "^1.0.0",
     "tailwindcss": "^2.0.4",
     "vite": "^2.1.0"
   }
