add public image path

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "storybook": "start-storybook -p 6006",
-    "storybook-docs": "start-storybook --docs --no-manager-cache",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "storybook-docs": "start-storybook -s public --docs --no-manager-cache",
+    "build-storybook": "build-storybook -s public",
     "tokens": "npm update dr066-ba-design-token-builder"
   },
   "dependencies": {
