--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "devlopment-system",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "Development System for Building Components",
+  "browser": "./src/components/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
