--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devlopment-system",
+  "name": "development-system",
   "version": "1.0.0",
   "description": "Development System for Building Components",
   "browser": "./src/components/index.js",
