--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-    command="npm run build-storybook -- --docs -o ./build"
+    command="build-storybook -s public -o ./build"
     publish="build/"
