--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "description": "Development System for Building Components",
   "browser": "./src/components/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "start-storybook -s ./public -p 6006",
     "storybook": "start-storybook -s ./public -p 6006",
     "storybook-docs": "start-storybook -s public --docs --no-manager-cache",
-    "build-storybook": "build-storybook -s public",
+    "build": "build-storybook -s public",
+    "storybook-build": "build-storybook -s public",
     "tokens": "npm update dr066-ba-design-token-builder"
   },
   "dependencies": {
-    "dr066-ba-design-token-builder": "git+https://git@github.com/david-roeger/dr066-ba-design-token-builder.git",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "dr066-ba-design-token-builder": "git+https://git@github.com/david-roeger/dr066-ba-design-token-builder.git"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -31,7 +28,6 @@
     "babel-loader": "^8.2.2",
     "postcss": "^8.2.8",
     "storybook-addon-pseudo-states": "^1.0.0",
-    "tailwindcss": "^2.0.4",
-    "vite": "^2.1.0"
+    "tailwindcss": "^2.0.4"
   }
 }
