--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "tokens": "npm update dr066-ba-design-token-builder"
   },
   "dependencies": {
-    "dr066-ba-design-token-builder": "git+https://git@github.com/david-roeger/dr066-ba-design-token-builder.git"
+    "dr066-ba-design-token-builder": "git+https://git@github.com/david-roeger/dr066-ba-design-token-builder.git",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -23,7 +25,6 @@
     "@storybook/react": "^6.2.9",
     "@storybook/theming": "^6.2.9",
     "@tailwindcss/jit": "^0.1.7",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "postcss": "^8.2.8",
