--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "postcss": "^8.2.8",
+    "prettier": "2.2.1",
     "storybook-addon-pseudo-states": "^1.0.0",
     "tailwindcss": "^2.0.4"
   }
